grid spacing fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -71,6 +71,7 @@ p, a, li, label {
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: max-content;
   /* grid-template-rows: repeat(3, 1fr); */
   gap: 15px;
   overflow-y: auto;
